--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -8,7 +8,7 @@ nav.navbar
             a.nav-link(href='/generatexml') Generare factură XML
         li.nav-item
             a.nav-link(href='/about') Despre
-        li
+        li.title
             h3.title= title
 
     //-   a.nav-link(href='/about') About
