--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,9 +12,11 @@ a {
 
 nav {
     background: lightblue;
+    padding: 0px;
+    margin: 0px;
 }
 
-ul {
+nav ul.navbar-nav {
     margin: 0px;
     padding: 0px;
     list-style: none;
@@ -23,27 +25,29 @@ ul {
     display: flex;
 }
 
-ul li {
+nav ul li {
     display: inline-block;
     cursor: pointer;
-    padding: 6px;
+    padding: 1px;
+    margin: 1px;
 }
 
-ul li a.nav-link {
+nav ul li a.nav-link {
     text-transform: uppercase;
     color: darkcyan;
     text-decoration: none;
     display: block;
-    padding: 16px;
+    padding: 10px;
+    margin: 0px;
 }
 
-ul li a.nav-link:hover {
+nav ul li a.nav-link:hover {
     background: darkcyan;
     color: white;
     border-radius: 8px;
 }
 
-ul li:last-child {
+nav ul li:last-child {
     background: lightskyblue;
     color: darkslateblue;
     text-align: center;
@@ -52,6 +56,20 @@ ul li:last-child {
 
 nav div {
     display: inherit;
+}
+
+li.title {
+    margin: 0px;
+    padding: 0px;
+    text-decoration: none;
+    cursor: default;
+}
+
+h3.title {
+    margin: 0px;
+    padding-top: 8px;
+    text-decoration: none;
+    cursor: default;
 }
 
 input {
@@ -65,6 +83,7 @@ h1 {
 
 .message {
     font-style: oblique;
+    color: blue;
 }
 
 fieldset {
@@ -72,29 +91,43 @@ fieldset {
     border-radius: 4px;
 }
 
-div.mandatory, div.optional {
+div.mandatory,
+div.optional {
     background-color: lightblue;
     border-radius: 3px;
 }
 
 .taxdatagroup {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    flex-flow: row;
-    justify-content: center;
+    display: inline-grid;
+    gap: 3px;
+    grid-template-columns: 8% 15% 8% 15% 8% 15% 8% 15%;
+    justify-content: space-evenly;
     justify-content: space-between;
     align-items: center;
     min-width: 100%;
+    background-color: lightskyblue;
 }
 
 .taxdatagroup input {
-    flex: 1 1 15%;
     margin: 1px;
     border-radius: 4px;
 }
 
 .taxdatagroup label {
-    flex: 1 0 10%;
     margin: 1px;
+}
+
+p.fields {
+    margin: 0.5px;
+    padding: 0.5px;
+}
+
+.deletebutton {
+    color: red;
+    display: grid;
+    float: right;
+}
+
+.editbutton {
+    color: darkgreen;
 }
